[package]
name = "music-recs-discord-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }
rspotify = { version = "0.11.6", features = ["cli"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
